--- a/Practica5/gotoxy/gotoxy.cbp
+++ b/Practica5/gotoxy/gotoxy.cbp
@@ -5,7 +5,7 @@
 		<Option title="gotoxy"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
-		<Option virtualFolders="CMake Files\;CMake Files\src\;CMake Files\..\;CMake Files\..\..\;CMake Files\..\..\..\;CMake Files\..\..\..\..\;CMake Files\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\..\opt\;CMake Files\..\..\..\..\..\..\..\opt\robocomp\;CMake Files\..\..\..\..\..\..\..\opt\robocomp\cmake\;CMake Files\..\..\..\..\..\..\..\opt\robocomp\cmake\modules\;CMake Files\..\..\..\..\..\..\..\usr\;CMake Files\..\..\..\..\..\..\..\usr\lib\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Core\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Gui\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Widgets\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Sql\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5OpenGL\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Xml\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5XmlPatterns\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Network\;"/>
+		<Option virtualFolders="CMake Files\;CMake Files\src\;CMake Files\..\;CMake Files\..\..\;CMake Files\..\..\..\;CMake Files\..\..\..\..\;CMake Files\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\robocomp\;CMake Files\..\..\..\..\..\..\robocomp\robocomp\;CMake Files\..\..\..\..\..\..\robocomp\robocomp\cmake\;CMake Files\..\..\..\..\..\..\robocomp\robocomp\cmake\modules\;CMake Files\..\..\..\..\..\..\..\;CMake Files\..\..\..\..\..\..\..\usr\;CMake Files\..\..\..\..\..\..\..\usr\lib\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Core\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Gui\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Widgets\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Sql\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5OpenGL\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Xml\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5XmlPatterns\;CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5Network\;"/>
 		<Build>
 			<Target title="all">
 				<Option working_dir="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy"/>
@@ -99,9 +99,9 @@
 					<Add directory="/opt/robocomp/include"/>
 					<Add directory="/classes"/>
 					<Add directory="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy"/>
-					<Add directory="/opt/robocomp/classes"/>
-					<Add directory="/opt/robocomp/libs"/>
-					<Add directory="/opt/robocomp/interfaces"/>
+					<Add directory="/home/robocomp/robocomp/classes"/>
+					<Add directory="/home/robocomp/robocomp/libs"/>
+					<Add directory="/home/robocomp/robocomp/interfaces"/>
 					<Add directory="/include"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtGui"/>
@@ -143,9 +143,9 @@
 					<Add directory="/opt/robocomp/include"/>
 					<Add directory="/classes"/>
 					<Add directory="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy"/>
-					<Add directory="/opt/robocomp/classes"/>
-					<Add directory="/opt/robocomp/libs"/>
-					<Add directory="/opt/robocomp/interfaces"/>
+					<Add directory="/home/robocomp/robocomp/classes"/>
+					<Add directory="/home/robocomp/robocomp/libs"/>
+					<Add directory="/home/robocomp/robocomp/interfaces"/>
 					<Add directory="/include"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/qt5/QtGui"/>
@@ -186,6 +186,24 @@
 				</MakeCommands>
 			</Target>
 		</Build>
+		<Unit filename="/home/robocomp/robocomp/classes/qlog/qlog.cpp">
+			<Option target="gotoxy"/>
+		</Unit>
+		<Unit filename="/home/robocomp/robocomp/classes/qlog/qlog.h">
+			<Option target="gotoxy"/>
+		</Unit>
+		<Unit filename="/home/robocomp/robocomp/classes/rapplication/rapplication.cpp">
+			<Option target="gotoxy"/>
+		</Unit>
+		<Unit filename="/home/robocomp/robocomp/classes/rapplication/rapplication.h">
+			<Option target="gotoxy"/>
+		</Unit>
+		<Unit filename="/home/robocomp/robocomp/classes/sigwatch/sigwatch.cpp">
+			<Option target="gotoxy"/>
+		</Unit>
+		<Unit filename="/home/robocomp/robocomp/classes/sigwatch/sigwatch.h">
+			<Option target="gotoxy"/>
+		</Unit>
 		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/src/CommonBehavior.cpp">
 			<Option target="gotoxy"/>
 		</Unit>
@@ -279,24 +297,6 @@
 		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/src/ui_mainUI.h">
 			<Option target="gotoxy"/>
 		</Unit>
-		<Unit filename="/opt/robocomp/classes/qlog/qlog.cpp">
-			<Option target="gotoxy"/>
-		</Unit>
-		<Unit filename="/opt/robocomp/classes/qlog/qlog.h">
-			<Option target="gotoxy"/>
-		</Unit>
-		<Unit filename="/opt/robocomp/classes/rapplication/rapplication.cpp">
-			<Option target="gotoxy"/>
-		</Unit>
-		<Unit filename="/opt/robocomp/classes/rapplication/rapplication.h">
-			<Option target="gotoxy"/>
-		</Unit>
-		<Unit filename="/opt/robocomp/classes/sigwatch/sigwatch.cpp">
-			<Option target="gotoxy"/>
-		</Unit>
-		<Unit filename="/opt/robocomp/classes/sigwatch/sigwatch.h">
-			<Option target="gotoxy"/>
-		</Unit>
 		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
 		</Unit>
@@ -306,11 +306,11 @@
 		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/src/CMakeListsSpecific.txt">
 			<Option virtualFolder="CMake Files\src\"/>
 		</Unit>
-		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/../../../../../../../opt/robocomp/cmake/robocomp.cmake">
-			<Option virtualFolder="CMake Files\..\..\..\..\..\..\..\opt\robocomp\cmake\"/>
+		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/../../../../../../robocomp/robocomp/cmake/robocomp.cmake">
+			<Option virtualFolder="CMake Files\..\..\..\..\..\..\robocomp\robocomp\cmake\"/>
 		</Unit>
-		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/../../../../../../../opt/robocomp/cmake/modules/qt.cmake">
-			<Option virtualFolder="CMake Files\..\..\..\..\..\..\..\opt\robocomp\cmake\modules\"/>
+		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/../../../../../../robocomp/robocomp/cmake/modules/qt.cmake">
+			<Option virtualFolder="CMake Files\..\..\..\..\..\..\robocomp\robocomp\cmake\modules\"/>
 		</Unit>
 		<Unit filename="/home/salabeta/robocomp/components/Robotica-2020-Marene/Practica5/gotoxy/../../../../../../../usr/lib/x86_64-linux-gnu/cmake/Qt5/Qt5Config.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\Qt5\"/>
